crates/djls-template-ast/src/snapshots/djls_template_ast__parser__tests__errors__parse_unclosed_django_for.snap
---
source: crates/djls-template-ast/src/parser.rs
expression: ast
---
nodes:
  - Block:
      Container:
        tag:
          name: for
          bits:
            - for
            - item
            - in
            - items
          span:
            start: 0
            length: 17
          tag_span:
            start: 0
            length: 3
          assignment: ~
        nodes:
          - Variable:
              bits:
                - item
                - name
              filters: []
              span:
                start: 23
                length: 9
        closing: ~
line_offsets:
  - 0
