crates/djls-template-ast/src/snapshots/djls_template_ast__parser__tests__errors__parse_unclosed_html_tag.snap
---
source: crates/djls-template-ast/src/parser.rs
expression: ast
---
nodes:
  - Text: "<div>"
errors: []
