crates/djls-template-ast/src/snapshots/djls_template_ast__parser__tests__errors__parse_unclosed_style.snap
---
source: crates/djls-template-ast/src/parser.rs
expression: ast
---
nodes:
  - Text:
      content: "<style>body"
      span:
        start: 0
        length: 11
  - Text:
      content: " "
      span:
        start: 11
        length: 1
  - Text:
      content: "{"
      span:
        start: 12
        length: 1
  - Text:
      content: " "
      span:
        start: 13
        length: 1
  - Text:
      content: "color:"
      span:
        start: 14
        length: 6
  - Text:
      content: " "
      span:
        start: 20
        length: 1
  - Text:
      content: blue;
      span:
        start: 21
        length: 5
  - Text:
      content: " "
      span:
        start: 26
        length: 1
line_offsets:
  - 0
errors: []
